--- a/Casino/Views/Users/Create.cshtml
+++ b/Casino/Views/Users/Create.cshtml
@@ -1,5 +1,69 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model UserCreate
 @{
+    ViewBag.Title = "Create User";
 }
+
+<a asp-controller="Users" asp-action="Index" class="link-hover">Back to Users List</a>
+<h2>@ViewBag.Title</h2>
+<div class="w-50">
+    <form asp-controller="Users" asp-action="Create" method="post">
+        @*First Name*@
+        <div class="form-field flex">
+            <div class="w-25">
+                <label for="FirstName" class="form-label pt">First Name</label>
+            </div>
+            <div class="flex-1">
+                <input asp-for="FirstName" class="form-input" />
+                <span asp-validation-for="FirstName" class="text-red"></span>
+            </div>
+        </div>
+        @*Last Name*@
+        <div class="form-field flex">
+            <div class="w-25">
+                <label for="LastName" class="form-label pt">First Name</label>
+            </div>
+            <div class="flex-1">
+                <input asp-for="LastName" class="form-input" />
+                <span asp-validation-for="LastName" class="text-red"></span>
+            </div>
+        </div>
+        @*Email*@
+        <div class="form-field flex">
+            <div class="w-25">
+                <label for="Email" class="form-label pt">Email</label>
+            </div>
+            <div class="flex-1">
+                <input type="email" asp-for="Email" class="form-input" />
+                <span asp-validation-for="Email" class="text-red"></span>
+            </div>
+        </div>
+        @*Phone Number*@
+        <div class="form-field flex">
+            <div class="w-25">
+                <label for="PhoneNumber" class="form-label pt">Phone Number</label>
+            </div>
+            <div class="flex-1">
+                <input type="number" asp-for="PhoneNumber" class="form-input" />
+                <span asp-validation-for="PhoneNumber" class="text-red"></span>
+            </div>
+        </div>
+        @*Submit*@
+        <div class="form-field flex">
+            <div class="flex-1">
+                <button class="button button-green-back">Create</button>
+            </div>
+        </div>
+        @*@if(ViewBag.Errors != null)
+        {
+        <div class="text-red ml">
+        <ul>
+        @foreach (string error in ViewBag.Errors)
+        {
+        <li class="ml">@error</li>
+        }
+        </ul>
+        </div>
+        }*@
+        @* <div asp-validation-summary="All"></div> *@
+    </form>
+</div>
