--- a/Casino/Views/Users/Index.cshtml
+++ b/Casino/Views/Users/Index.cshtml
@@ -1,5 +1,29 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model ICollection<User>
 @{
+    ViewBag.Title = "Users";
 }
+<form action="~/users/index" method="get">
+    <h1>People</h1>
+    <a href="~/person/create" class="ml">Create Person</a>
+    <table class="table w-100 mt persons">
+        <thead>
+            <tr>
+                <td>First Name</td>
+                <td>Last Name</td>
+                <td>Email</td>
+                <td>Phone Number</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (User user in @Model)
+            {
+                <tr>
+                    <td>@user.FirstName</td>
+                    <td>@user.LastName</td>
+                    <td>@user.Email</td>
+                    <td>@user.PhoneNumber</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</form>
