--- a/Casino/Views/_ViewImports.cshtml
+++ b/Casino/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Casino
 @using Casino.Models
+@using Casino.DataAccess.Dtos
+@using Casino.DataAccess.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
