modified create and index pages fixed controllers run migration

--- a/Casino/Views/Users/Create.cshtml
+++ b/Casino/Views/Users/Create.cshtml
@@ -33,7 +33,7 @@
                 <label for="Email" class="form-label pt">Email</label>
             </div>
             <div class="flex-1">
-                <input type="email" asp-for="Email" class="form-input" />
+                <input type="text" asp-for="Email" class="form-input" />
                 <span asp-validation-for="Email" class="text-red"></span>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <label for="PhoneNumber" class="form-label pt">Phone Number</label>
             </div>
             <div class="flex-1">
-                <input type="number" asp-for="PhoneNumber" class="form-input" />
+                <input type="text" asp-for="PhoneNumber" class="form-input" />
                 <span asp-validation-for="PhoneNumber" class="text-red"></span>
             </div>
         </div>
