--- a/Casino/Views/Users/Index.cshtml
+++ b/Casino/Views/Users/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <form action="~/users/index" method="get">
     <h1>People</h1>
-    <a href="~/person/create" class="ml">Create Person</a>
+    <a href="~/users/create" class="ml">Create User</a>
     <table class="table w-100 mt persons">
         <thead>
             <tr>
