added pagination, tests for pagination and seeded data

--- a/Casino/Views/Users/Index.cshtml
+++ b/Casino/Views/Users/Index.cshtml
@@ -26,4 +26,17 @@
             }
         </tbody>
     </table>
+    <div class="paginat">
+        @for (int i = ViewBag.StartPage; i <= ViewBag.EndPage; i++)
+        {
+            if (i == ViewBag.CurrentPage)
+            {
+                <span>@i</span> 
+            }
+            else
+            {
+                <a href="@Url.Action("Index", new { page = i })">@i</a>
+            }
+        }
+    </div>
 </form>
